[package]
name = "pnwkit-core"
version = "0.1.0-alpha.10"
edition = "2021"
license = "MIT"
repository = "https://github.com/mrvillage/pnwkit"
description = "The core library for developing bindings for pnwkit."

[dependencies.serde]
version = "1.0"

[dependencies.serde_json]
version = "1.0"

[dependencies.dashmap]
version = "5.3"
features = ["serde"]

[dependencies.async-trait]
version = "0.1"

[dependencies.tokio]
version = "1.20"
optional = true
features = ["sync", "time"]

[dependencies.serde_urlencoded]
version = "0.7"
optional = true

[dependencies.paste]
version = "1.0"

[dependencies.uuid]
version = "1.1"
optional = true

[dependencies.bigdecimal]
version = "0.3"
optional = true

[dependencies.time]
version = "0.3"
features = ["parsing"]
optional = true

[dependencies.chrono]
version = "0.4"
optional = true

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "pnwkit"
harness = false

[features]
default = ["async", "sync", "subscriptions"]
async = ["dep:tokio"]
sync = []
subscriptions = ["dep:tokio", "dep:serde_urlencoded"]
