[package]
name = "pnwkit"
version = "3.0.0-alpha.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/mrvillage/pnwkit"
description = "pnwkit bindings for Rust."

[dependencies.pnwkit-core]
path = "../pnwkit-core"
default-features = false
version = "0.1.0-alpha"

[dependencies.reqwest]
version = "0.11"
features = ["rustls-tls"]
default-features = false

[dependencies.tokio-tungstenite]
version = "0.17"
features = ["native-tls"]
optional = true

[dependencies.tokio]
version = "1.20"
optional = true
features = ["time"]

[dependencies.futures-util]
version = "0.3"
optional = true
features = []

[features]
default = []
async = ["pnwkit-core/async", "dep:tokio"]
sync = ["reqwest/blocking", "pnwkit-core/sync"]
subscriptions = ["pnwkit-core/subscriptions", "dep:tokio-tungstenite", "dep:tokio", "dep:futures-util"]
uuid = ["pnwkit-core/uuid"]
bigdecimal = ["pnwkit-core/bigdecimal"]
time = ["pnwkit-core/time"]
chrono = ["pnwkit-core/chrono"]
