[package]
name = "pnwkit"
version = "3.0.0-alpha.15"
edition = "2021"
license = "MIT"
repository = "https://github.com/mrvillage/pnwkit"
description = "pnwkit bindings for Rust."

[dependencies.pnwkit-core]
path = "../pnwkit-core"
default-features = false
version = "0.1.0-alpha.15"

[dependencies.reqwest]
version = "0.11"
features = ["rustls-tls-webpki-roots"]
default-features = false

[dependencies.tokio-tungstenite]
version = "0.19"
features = ["rustls-tls-webpki-roots"]
optional = true

[dependencies.tokio]
version = "1.28"
optional = true
features = ["time"]

[dependencies.futures-util]
version = "0.3"
optional = true
features = []

[features]
default = []
async = ["pnwkit-core/async", "dep:tokio"]
sync = ["reqwest/blocking", "pnwkit-core/sync"]
subscriptions = ["pnwkit-core/subscriptions", "dep:tokio-tungstenite", "dep:tokio", "dep:futures-util"]
uuid = ["pnwkit-core/uuid"]
bigdecimal = ["pnwkit-core/bigdecimal"]
time = ["pnwkit-core/time"]
chrono = ["pnwkit-core/chrono"]
